Updating to version 0.2